@@ -1,3 +1,5 @@
+- fixed libgcrypt initialization, libraries trying to re-initialize libgcrypt
+(maybe with wrong thread handlers) should do a no-op.
 26/12/2008 0.2.9
 - src/lua/hotmail.lua, src/lua/juno.lua: Fixed login issues (russell822)
 - src/lua/supereva.lua: added patch by la scimmia to fix To: problem (gareuselesinge)
